--- a/.env
+++ b/.env
@@ -5,25 +5,25 @@
 # - The codebase has to stay open source, whether it was modified or not
 # - You can not repackage or sell the codebase
 # - Acquire a commercial license to remove these terms by emailing: license@cal.com
-NEXT_PUBLIC_LICENSE_CONSENT=
-LICENSE=
+NEXT_PUBLIC_LICENSE_CONSENT=agree
+LICENSE=https://github.com/calendso/calendso/blob/main/LICENSE
 
 # BASE_URL and NEXT_PUBLIC_APP_URL are both deprecated. Both are replaced with one variable, NEXT_PUBLIC_WEBAPP_URL
 # BASE_URL=http://localhost:3000
-# NEXT_PUBLIC_APP_URL=http://localhost:3000
+# NEXT_PUBLIC_APP_URL=https://booking.wree.space
 
-NEXT_PUBLIC_WEBAPP_URL=http://localhost:3000
+NEXT_PUBLIC_WEBAPP_URL=https://booking.wree.space
 NEXT_PUBLIC_API_V2_URL=http://localhost:5555/api/v2
 
 # Configure NEXTAUTH_URL manually if needed, otherwise it will resolve to {NEXT_PUBLIC_WEBAPP_URL}/api/auth
-# NEXTAUTH_URL=http://localhost:3000/api/auth
+# NEXTAUTH_URL=https://booking.wree.space/api/auth
 
 # It is highly recommended that the NEXTAUTH_SECRET must be overridden and very unique
 # Use `openssl rand -base64 32` to generate a key
-NEXTAUTH_SECRET=secret
+NEXTAUTH_SECRET=LJoF49wfm/UJW+H7CcPXaCLJYoAOOj9UscwBw5aDCnw=
 
 # Encryption key that will be used to encrypt CalDAV credentials, choose a random string, for example with `dd if=/dev/urandom bs=1K count=1 | md5sum`
-CALENDSO_ENCRYPTION_KEY=secret
+CALENDSO_ENCRYPTION_KEY=1fef676f7668265b6b28b7db6516d12c
 
 # Deprecation note: JWT_SECRET is no longer used
 # JWT_SECRET=secret
@@ -51,13 +51,13 @@ ZOOM_CLIENT_SECRET=
 
 # E-mail settings
 # Configures the global From: header whilst sending emails.
-EMAIL_FROM_NAME=YourOrganizationName
-EMAIL_FROM=notifications@example.com
+EMAIL_FROM_NAME=wree
+EMAIL_FROM=notifications@mail.wree.space
 
 # Configure SMTP settings (@see https://nodemailer.com/smtp/).
-EMAIL_SERVER_HOST=smtp.example.com
+EMAIL_SERVER_HOST=smtp.resend.com
 EMAIL_SERVER_PORT=587
-EMAIL_SERVER_USER=email_user
-EMAIL_SERVER_PASSWORD=email_password
+EMAIL_SERVER_USER=resend
+EMAIL_SERVER_PASSWORD=re_VNxZH1Dx_5cvKb5W6uoScUMpLoKfZcudP
 
 NODE_ENV=production
