--- a/.env
+++ b/.env
@@ -28,8 +28,8 @@ CALENDSO_ENCRYPTION_KEY=1fef676f7668265b6b28b7db6516d12c
 # Deprecation note: JWT_SECRET is no longer used
 # JWT_SECRET=secret
 
-POSTGRES_USER=unicorn_user
-POSTGRES_PASSWORD=magical_password
+POSTGRES_USER=calcom
+POSTGRES_PASSWORD=plsC#AnG3passw0rd
 POSTGRES_DB=calendso
 DATABASE_HOST=database:5432
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}/${POSTGRES_DB}
